New interface PathSet

--- a/BlibGui/MainForm.resx
+++ b/BlibGui/MainForm.resx
@@ -112,9 +112,158 @@
     <value>2.0</value>
   </resheader>
   <resheader name="reader">
-    <value>System.Resources.ResXResourceReader, System.Windows.Forms, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
+    <value>System.Resources.ResXResourceReader, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
   <resheader name="writer">
-    <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
+    <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
+  <metadata name="ilThreadImages.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
+    <value>241, 17</value>
+  </metadata>
+  <metadata name="ilStateImages.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
+    <value>378, 19</value>
+  </metadata>
+  <data name="ilStateImages.ImageStream" mimetype="application/x-microsoft.net.object.binary.base64">
+    <value>
+        AAEAAAD/////AQAAAAAAAAAMAgAAAFdTeXN0ZW0uV2luZG93cy5Gb3JtcywgVmVyc2lvbj00LjAuMC4w
+        LCBDdWx0dXJlPW5ldXRyYWwsIFB1YmxpY0tleVRva2VuPWI3N2E1YzU2MTkzNGUwODkFAQAAACZTeXN0
+        ZW0uV2luZG93cy5Gb3Jtcy5JbWFnZUxpc3RTdHJlYW1lcgEAAAAERGF0YQcCAgAAAAkDAAAADwMAAABK
+        HgAAAk1TRnQBSQFMAgEBBwEAAUgBAAFIAQABEAEAARABAAT/ASEBAAj/AUIBTQE2BwABNgMAASgDAAFA
+        AwABIAMAAQEBAAEgBgABICYAAxwBKAM7AWQDSAGGA0gBhgM7AWQDHQEpFAADMAFLA04BlAFVAVYBWAG8
+        A1UBtQNVAbUCVQFWAbQBVQJWAbMBVQJWAbMCUwFVAbADVQGyAVUCVgGzAlYBVwG4AVYBVwFZAcIBVwFa
+        AV0BygNRAaACNAE1AVWMAAMaASUCUgFTAagBMAEqAaIB9wEkAR8B7gH/AT8BOgH8Af8BPQE4AfwB/wEn
+        ASIB7wH/ATEBLAGkAfcDUwGqAxwBJwwAAkcBSAGDAVEBXgFrAeABAAF4Av8BMwG4Av8BMwG4Av8BTgHH
+        Av8BXwHSAv8BXwHSAv8BXwHSAv8BXwHSAv8BTgHHAv8BMwG4Av8BMwG4Av8BAAF4Av8BTAFaAWsB5ANH
+        AYKIAAMoATwCSgF0AecBBAEAAeIB/wIAAeUB/wEDAQAB9gH/ARABCwL/ARIBDQL/AQYBAQH5Af8CAAHp
+        Af8BAgEAAeAB/wFGAUUBcgHpAysBQggAATwCPQFoAVYBWwFlAdYBAAF4Av8BAAGKAv8BDQGhAv8BKwG0
+        Av8BTgHHAv8BWQHNAv8BXwHSAv8BVgHNAv8BMwG4Av8BEgGiAv8BAAGTAv8BAAGUAv8BVwFaAV0BygI1
+        ATYBWBQAA0ABcAE1AYoBOwH+A0oBimQAAxkBIwFHAUUBcQHpAgAB0QH/AgABvgH/ATwBOQHQAf8CAAHQ
+        Af8CAAHbAf8CAAHdAf8CAAHTAf8BPAE6AdMB/wEBAQABvwH/AgABzAH/AkIBdwHsAxsBJgQAAwsBDwI8
+        AT0BaAEGAXIB3wH/AQABgAL/AQABhwL/AREBmAL/ARsBogL/AaEB2QL/AZ0B1wL/ARoBogL/ARUBmwL/
+        AQMBjgL/AQIBlQL/AQABbAHXAf8DNwFbAwcBCRAAAzsBZQE+AbgBSQH/AYEB/wGNAf8BNgGtAT4B/wNF
+        AX1gAANTAaoBAgEAAb0B/wEFAQQBpwH/AYIBgQHIAf8CzQHAAf8BagFoAc4B/wIAAcAB/wIAAcEB/wFo
+        AWYBzwH/As4BwQH/AYkBiAHLAf8CBwGqAf8CAAG1Af8CUwFVAbAIAAMEAQYBWAFfAWUB1AEhAaAB/QH/
+        AQABhgH9Af8BAAGHAv8BAwGRAf4B/wGgAdQB+QH/AZgB0gH6Af8BAgGRAv8BAAGMAv8BAAGNAv8BBwGX
+        AfwB/wFYAVkBXAHJAwQBBRAAAzgBXQE5AakBQAH9AVsB/QFqAf8BXwH8AW0B/wFWAfoBYwH/AS4BtQE3
+        Af8BRAFFAUQBfFgAAxwBKAEdARwBigH6AgABkAH/ARsBGAGYAf8BvAG6AcEB/wLFAb0B/wHOAc0BxQH/
+        AWgBZgHNAf8BZgFkAc4B/wLOAcYB/wHCAcMBuwH/Ac8BywHQAf8BLwEoAbEB/wIAAYgB/wEVAREBjwH7
+        Ax8BLAgAAzoBYQEwAZcB3wH/ASsBqQH9Af8BDQGRAfwB/wEAAXQC/wElAZ8B/AH/ASgBpAH8Af8BAAGA
+        Af4B/wEAAYIB/gH/AQABlAL/AQcBcQHWAf8DNQFXEAADOgFiAScBmgEzAf4BUQHsAV8B/wGDAfABjAH/
+        AYsB9QGVAf8BUQH0AWAB/wFEAe4BUgH/ASIBkwEqAf8BRAFFAUQBfFQAAzsBZQEDAQABmAH/AgABXQH/
+        AgABaAH/ASYBIwGNAf8BwAG/AcgB/wLUAc8B/wLYAdQB/wLYAdQB/wHUAdMBzwH/AcMBwgHJAf8BLAEo
+        AZYB/wIAAXMB/wIAAVwB/wIAAYcB/wM+AWsIAAMLAQ8BWAFcAV0BzQE7Aa0B+QH/ASwBngHyAf8BAgGK
+        AfYB/wG2Ad4B/gH/AbAB2AH9Af8BAAFmAfYB/wEAAYAB/gH/AQMBlQL/AVYBVwFZAcIDBwEKCAADBwEK
+        AzsBZQEgAY0BKwH+AVcB2wFjAf8BjAHkAZQB/wGkAeYBqwH/AZAB1AGWAf8BgQHrAYsB/wFCAecBUQH/
+        ATcB1AFFAf8BIgGNASsB/wFEAUUBRAF8UAACSAFJAYgBAgEAAYMB/wIAAUoB/wIAAWkB/wIAAYUB/wEk
+        ASABogH/AtEB2QH/AuEB3gH/AuAB3gH/AtQB2gH/ASkBJQGmAf8CAAGRAf8CAAGFAf8CAAFiAf8CAAF2
+        Af8DSgGMDAADPAFmATkBlwHdAf8BLwGfAfAB/wEMAYgB5wH/Ab4B4QH4Af8BswHYAfcB/wEAAWEB7wH/
+        AQABiAL/AQUBcwHWAf8DMwFTDAABTQFqAVAB6gE2AZ8BPwH/AW4B1AF4Af8BmwHfAaIB/wG2AewBvAH/
+        AVIBgwFUAfQBWQFdAVkBygGRAdMBlgH/AW4B4QF4Af8BMQHaAUEB/wEsAcgBOgH/ASMBjwErAf8DQwF3
+        TAACSAFJAYcBAgEAAZYB/wIAAXAB/wIAAY0B/wIAAZsB/wFtAWwBzgH/Ae0B7AHuAf8C8wHwAf8C8wHw
+        Af8D7gH/AXABbgHQAf8CAAGiAf8CAAGXAf8CAAGGAf8CAAGYAf8DSgGLDAADBwEJAVgBXAFgAdEBQgGr
+        AfAB/wEbAYwB4wH/AccB4gH3Af8BxAHkAfoB/wEDAYwB9wH/AQkBmAH9Af8BVwFYAVoBwAMBAQIMAAFN
+        AWoBUAHqAVMBqAFaAf8ByAHqAc0B/wHBAeYBxQH/AVwBkQFcAfgDHAEoBAABWQFeAVkB0AGRAdQBmAH/
+        AV0B1QFoAf8BHAHJASwB/wEgAboBLgH/ASMBjwEsAf8DRQF9SAADPAFmAQUBAAG3Af8CAAGUAf8CAAGh
+        Af8BgQF4AdMD/wH+A/8B/gH/AeYB5QHtAf8B5AHjAewD/wH+A/8B/QH/AYUBggHXAf8BAQEAAasB/wIA
+        AZwB/wEBAQABsAH/Az4BaxAAAzcBWgE6AZEB0wH/ATEBngHqAf8BxgHiAfUB/wG9AeMB/AH/ARkBqAL/
+        ASUBfwHLAf4DMAFLEAADBwEKAzsBZQFhAasBaAH/AVEBkgFWAfoDJwE6DAABWwFgAVsB0AGQAdIBlgH/
+        AUsBxwFWAf8BCAG3ARgB/wEVAawBIwH/ASMBjwEsAf8BRAFFAUQBfAMQARZAAAMcASgBJQEjAbMB+QEC
+        AQABywH/ASUBHwHDAf8D9AX/AugB7gH/ATABKgHNAf8BKwElAcwB/wHlAeQB7AX/AvYB9AH/AScBIQHK
+        Af8BAQEAAdAB/wEgARsBsQH7Ax8BLBAAAwcBCgFYAVoBXAHGAUgBqQHpAf8BRAGpAesB/wE9Aa4B+AH/
+        ATEBsgL/AlUBVwG3HAADLwFKAycBOhQAAVkBXwFZAdIBkgHMAZgB/wE6AbQBRgH/AQABoAEFAf8BDgGe
+        ARkB/wEgAY4BKQH/AUcBbQFKAe5EAANTAaoBKwEkAfUB/wEYAREB3QH/AVoBVAHOAf8BzgHMAd8B/wFI
+        AUMB0gH/AREBCgHwAf8BEQEKAfEB/wFEAT4B0gH/Ac4BzAHgAf8BWwFWAdAB/wEXARAB4wH/ASgBIgH0
+        Af8CVQFWAbEYAAMxAU4BPwGWAdUB/wE8AawB+AH/ATUBtAL/ATIBhAHMAf4DKAE8PAABXAFhAVwBzwGT
+        AcMBmAH/ATMBmgE7Af8BBwGFAQoB/wE0AZQBOwH/AS0BeQE7AfpEAAMaASQBVAFTAYcB6gFJAUMC/wE0
+        AS4B8wH/ATQBLgHbAf8BNQEwAfkB/wE/ATkB/gH/AT4BOQL/AT0BNwH7Af8BRQE9Ad8B/wE1AS8B9gH/
+        AUgBQwL/AVEBUAGOAe0DHAEoGwABAQFWAlgBvAFRAb4C/wFIAb4B/gH/A1MBqkQAAV4BYwFfAdUBhAG2
+        AYkB/wFmAasBawH/AVQBYgFUAeQDTAGSSAADKgFBAWABWwGJAekBcAFsAv8BZgFiAv8BZwFiAv8BZQFh
+        Av8BZQFgAv8BZgFiAv8BawFnAv8BcAFtAv8CWQGOAesDLAFEIAACKwEsAkMBpQHnAf8BQQGFAbQB+AMj
+        ATNIAAFgAWkBYAHfAWcBhAFnAfIDDAEQUAADHAEoAlMBVAGsAYgBhAHMAfkBtgG0Av8BngGbAv8BmgGX
+        Av8BlwGVAv8BeQF4Ac8B+gNUAa4DHQEqKAADSgGKA0UBfbAAAx8BLAE9ATwBPQFoA0oBigNKAYsDPQFp
+        Ax8BLTAAAyUBNwMhATD/AGkAAVMCUgGpAVkBVgFVAbYDDQER9AABXQFbAVYBwwHXAYEBRgH/AYABZQFI
+        AekDJgE4KAACjwGOAf8CjwGOAf8CjwGOAf8CjwGOAf8CjwGOAf8CjwGOAf8CjwGOAf8CjwGOAf8CjwGO
+        Af8CjwGOAf8CjwGOAf8CjwGOAf8CjwGOAf8MAAKPAY4B/wKPAY4B/wKPAY4B/wKPAY4B/wKPAY4B/wKP
+        AY4B/wKPAY4B/wKPAY4B/wKPAY4B/wKPAY4B/wKPAY4B/wKPAY4B/wKPAY4B/wwAAo8BjgH/Ao8BjgH/
+        Ao8BjgH/Ao8BjgH/Ao8BjgH/Ao8BjgH/Ao8BjgH/Ao8BjgH/Ao8BjgH/Ao8BjgH/Ao8BjgH/Ao8BjgH/
+        Ao8BjgH/FAABXQFbAVYBwwHpAbEBUwH/AegBrgFOAf8BpQFmASEB+wJSAVABpCQAAo8BjgH/A/QB/wP0
+        Af8D9AH/A/QB/wP0Af8D9AH/A/QB/wP0Af8D9AH/A/QB/wP0Af8CjwGOAf8MAAKPAY4B/wP0Af8D9AH/
+        A/QB/wP1Af8D+QH/A/gB/wP1Af8D9AH/A/QB/wP0Af8D9AH/Ao8BjgH/DAACjwGOAf8D9AH/A/QB/wP0
+        Af8D9AH/A/QB/wP0Af8D9AH/A/QB/wP0Af8D9AH/A/QB/wKPAY4B/xQAAV0BWwFWAcMB3wGOARsB/wHe
+        AY4BGwH/AeQBpgFDAf8B5gGiATUB/wFhAVsBVwHLAysBQhwAAo8BjgH/A/QB/wHMAcsBygH/AdUC1AH/
+        AdwC2wH/AuEB4AH/AucB5gH/AusB6gH/AuwB6wH/AewC6wH/AeoC6QH/A/QB/wKPAY4B/wwAAo8BjgH/
+        A/QB/wHMAcsBygH/AdsC2gH/AekB4gHfAf8BugGZAYwB/wG9AZ0BkAH/AfYB8wHyAf8C7QHsAf8B7ALr
+        Af8B6gLpAf8D9AH/Ao8BjgH/DAACjwGOAf8D9AH/AWsBSAEbAf8BZAFDARkB/wFbAT4BFwH/AVMBOAEU
+        Af8BTwE0ARMB/wFPATQBEwH/AU8BNAETAf8BTwE0ARMB/wFPATQBEwH/A/QB/wKPAY4B/xQAAV0BWwFW
+        AcMB3AGKAR4B/wHXAXcBCQH/AdsBhgEUAf8B4AGdATkB/wHkAaUBQgH/AX8BZwFMAeUDOwFkGAACjwGO
+        Af8D9AH/AcYBxAHCAf8D6QH/A+0B/wPwAf8D9AH/A/YB/wP2Af8D9gH/AuYB5QH/A/QB/wKPAY4B/wwA
+        Ao8BjgH/A/QB/wHKAcgBxgH/AfAB7AHqAf8BuwGZAYsB/wGXAVUBQAH/AZgBVwFCAf8B0QG5AbAB/wP5
+        Af8D9gH/A+YB/wP0Af8CjwGOAf8MAAKPAY4B/wP0Af8BbwFLAR0B/wG4AZIBTwH/Aa4BhgFGAf8BpAF0
+        AT4B/wGZAWgBNQH/AZMBXwEsAf8BjwFZASYB/wGMAVMBHwH/AU8BNAETAf8D9AH/Ao8BjgH/FAABXQFb
+        AVYBwwHYAYUBHgH/AdMBcQEJAf8B1QF1AQsB/wHXAXkBDgH/AdsBkgErAf8B4QGlAUgB/wG5AXkBKQH8
+        A0wBkhQAAo8BjgH/A/QB/wHCAb8BvAH/AeUB5AHjAf8D6QH/A+0B/wPyAf8D9AH/A/UB/wP0Af8C4gHh
+        Af8D9AH/Ao8BjgH/DAACjwGOAf8D9AH/AdEBzwHNAf8B6QHhAd4B/wGVAVMBPgH/AZYBVQE/Af8BlwFV
+        AUAB/wGkAWkBVwH/AfoB+QH4Af8D9AH/AuIB4QH/A/QB/wKPAY4B/wwAAo8BjgH/A/QB/wF1AU8BHgH/
+        AcIBnQFXAf8BswGJASEB/wGqAYEBHgH/AaABcgEcAf8BlgFpARkB/wGPAWMBGAH/AY8BWgEmAf8BTwE0
+        ARMB/wP0Af8CjwGOAf8UAAFdAVsBVgHDAdQBeQEdAf8BzgFpAQcB/wHQAW0BCgH/AdEBbwEJAf8B0wFx
+        AQoB/wHWAYYBHQH/Ad0BngFEAf8B3gGYATYB/wFcAVkBVAHCAxABFQwAAo8BjgH/A/QB/wG/AbsBuAH/
+        AeEB3wHdAf8C5QHkAf8D6gH/A+8B/wPyAf8D8gH/A/IB/wHeAd0B3AH/A/QB/wKPAY4B/wwAAo8BjgH/
+        A/QB/wHhAeAB3gH/AaoBdQFkAf8BlAFSAT0B/wHiAdQBzwH/AacBbgFdAf8BlwFVAUAB/wHVAb8BtwH/
+        A/YB/wHeAd0B3AH/A/QB/wKPAY4B/wwAAo8BjgH/A/QB/wGBAVQBIAH/AcsBqQFgAf8BvwGUASQB/wG4
+        AY4BIgH/AbABhwEgAf8BpwF5AR4B/wGfAXEBHAH/AZoBZQEuAf8BVgE6ARUB/wP0Af8CjwGOAf8UAAFd
+        AVsBVgHDAdMBdgEbAf8BzQFoAQcB/wHPAWwBCQH/AdABbgEKAf8B0QFwAQoB/wHTAXEBCQH/AdUBeQEU
+        Af8B2wGYATgB/wHhAaYBTgH/AYoBagFMAekDKgFACAACjwGOAf8D9AH/AbwBtwGyAf8B3AHYAdUB/wHf
+        AdwB2gH/AeMB4QHgAf8D6AH/A+wB/wPtAf8D7QH/AdYB1QHUAf8D9AH/Ao8BjgH/DAACjwGOAf8D9AH/
+        Ac0ByQHFAf8B3QHPAckB/wHIAa4BowH/Au4B7QH/AdUBwQG6Af8BlgFUAT8B/wGlAWwBWgH/A/gB/wHW
+        AtUB/wP0Af8CjwGOAf8MAAKPAY4B/wP0Af8BhQFXASEB/wHUAbMBZwH/AckBngEmAf8BxAGZASUB/wG+
+        AZMBJAH/AbcBjQEiAf8BrgGFAR8B/wGmAXMBOAH/AV8BQAEYAf8D9AH/Ao8BjgH/FAABXQFZAVYBwwHh
+        AZEBIAH/AeIBjgEOAf8B4gGOARAB/wHiAY8BEAH/AeIBjwEQAf8B4gGPARAB/wHjAY4BDQH/AeUBlAEV
+        Af8B4wGkAUQB/wGbAWYBNQH1Ay4BSAgAAo8BjgH/A/QB/wG5AbMBrgH/AdcB0QHNAf8B2QHUAdAB/wHb
+        AdcB1AH/Ad8B3AHaAf8B4wHiAeEB/wLmAeUB/wPoAf8CzQHMAf8D9AH/Ao8BjgH/DAACjwGOAf8D9AH/
+        AbkBswGuAf8B3QHZAdUB/wHlAeIB3wH/AdwB2AHVAf8B9AHzAfIB/wGhAWcBVAH/AZQBUgE9Af8B1gHD
+        AbwB/wLcAdsB/wP0Af8CjwGOAf8MAAKPAY4B/wP0Af8BiQFZASIB/wHaAbsBbgH/AdEBpAEoAf8BzgGi
+        AScB/wHJAZ0BJgH/AcIBlwElAf8BuwGRASMB/wGxAYYBQQH/AWgBRgEaAf8D9AH/Ao8BjgH/FAABXQFZ
+        AVYBwwHnAZwBIgH/Ae0BnwESAf8B7AGeARMB/wHsAZ4BEwH/AewBngETAf8B7gGfAREB/wHuAaIBGwH/
+        Ad4BjAEdAf8BYgFcAVYBzAMWAR4MAAKPAY4B/wP0Af8BuQGzAa4B/wHVAc8BywH/AdUBzwHLAf8B1gHR
+        Ac0B/wHaAdUB0gH/Ad4B2wHYAf8B4QHfAd0B/wHkAeMB4gH/AcgBxwHGAf8D9AH/Ao8BjgH/DAACjwGO
+        Af8D9AH/AbkBswGuAf8B1QHPAcsB/wHVAc8BywH/AdYB0AHMAf8B5gHiAeAB/wHPAbgBrwH/AZIBUAE7
+        Af8BpQFtAVsB/wHoAucB/wP0Af8CjwGOAf8MAAKPAY4B/wP0Af8BiwFbASMB/wHgAcIBdQH/AdUBqAEp
+        Af8B0wGmASkB/wHQAaQBKAH/AcsBnwEnAf8BxQGZASUB/wG7AZIBSgH/AXABTAEdAf8D9AH/Ao8BjgH/
+        FAABXQFZAVYBwwHtAaQBJAH/AfYBrAEVAf8B9QGrARYB/wH1AasBFQH/AfgBsAEWAf8B8gGqASEB/wHD
+        AW0BFAH/A1ABnQMCAQMQAAKPAY4B/wP0Af8BuQGzAa4B/wHVAc8BywH/AdUBzwHLAf8B1QHPAcsB/wHV
+        Ac8BywH/AdgB0wHQAf8B3AHYAdUB/wHfAdwB2gH/AcUBwwHBAf8D9AH/Ao8BjgH/DAACjwGOAf8D9AH/
+        AbkBswGuAf8B1QHPAcsB/wHVAc8BywH/AdUBzwHLAf8B1gHQAcwB/wHxAe4B7QH/AZ0BYAFNAf8BkgFQ
+        AToB/wHQAb8BuQH/A/YB/wKPAY4B/wwAAo8BjgH/A/QB/wGNAVwBIwH/AeQByAF5Af8B4QHDAXUB/wHd
+        Ab4BbwH/AdkBtwFoAf8B0wGvAWIB/wHMAacBWgH/AcQBnQFTAf8BdgFQAR4B/wP0Af8CjwGOAf8UAAFd
+        AVkBVgHDAfMBrAElAv8BugEYAf8B/gG4ARcC/wG+ARwB/wHvAaYBJQH/AYcBZAFCAewDLwFJGAACjwGO
+        Af8D9AH/AbkBswGuAf8BuQGzAa4B/wG5AbMBrgH/AbkBswGuAf8BuQGzAa4B/wG5AbMBrgH/AboBtAGv
+        Af8BvQG5AbQB/wHBAb4BuwH/A/QB/wKPAY4B/wwAAo8BjgH/A/QB/wG5AbMBrgH/AbkBswGuAf8BuQGz
+        Aa4B/wG5AbMBrgH/AbkBswGuAf8B0AHMAckB/wHAAacBnQH/AasBhgFtAf8B5AHfAdwB/wP1Af8CjwGO
+        Af8MAAKPAY4B/wP0Af8BjQFcASMB/wGOAVwBJAH/AY4BXAEkAf8BjQFcASMB/wGMAVsBIwH/AYoBWgEi
+        Af8BhwFYASIB/wGEAVUBIQH/AYABUwEgAf8D9AH/Ao8BjgH/FAABXQFZAVYBwwHzAawBIwL/Ab8BFgL/
+        Ab8BIQH/AeMBlQEiAf8BYgFbAVYByQMUARscAAKPAY4B/wP0Af8D9AH/A/QB/wP0Af8D9AH/A/QB/wP0
+        Af8D9AH/A/QB/wP0Af8D9AH/Ao8BjgH/DAACjwGOAf8D9AH/A/QB/wP0Af8D9AH/A/QB/wP0Af8D9AH/
+        A/gB/wP5Af8D9gH/A/QB/wKPAY4B/wwAAo8BjgH/A/QB/wP0Af8D9AH/A/QB/wP0Af8D9AH/A/QB/wP0
+        Af8D9AH/A/QB/wP0Af8CjwGOAf8UAAFdAVkBVgHDAfMBsgExAf8B+wG6ASgB/wG5AWQBIAH9A04BmQMB
+        AQIgAAKPAY4B/wKPAY4B/wKPAY4B/wKPAY4B/wKPAY4B/wKPAY4B/wKPAY4B/wKPAY4B/wKPAY4B/wKP
+        AY4B/wKPAY4B/wKPAY4B/wKPAY4B/wwAAo8BjgH/Ao8BjgH/Ao8BjgH/Ao8BjgH/Ao8BjgH/Ao8BjgH/
+        Ao8BjgH/Ao8BjgH/Ao8BjgH/Ao8BjgH/Ao8BjgH/Ao8BjgH/Ao8BjgH/DAACjwGOAf8CjwGOAf8CjwGO
+        Af8CjwGOAf8CjwGOAf8CjwGOAf8CjwGOAf8CjwGOAf8CjwGOAf8CjwGOAf8CjwGOAf8CjwGOAf8CjwGO
+        Af8UAAFdAVkBVgHDAecBuAGHAf8BfwFdAUcB6gMtAUXwAAFUAlMBqgFjAVwBWQHNAxIBGSgAAUIBTQE+
+        BwABPgMAASgDAAFAAwABIAMAAQEBAAEBBgABARYAA/8BAAH4AR8CAAL/AgAB4AEHAgAC/wIAAcABAwIA
+        AfgB/wIAAYABAQIAAfABfwIAAYABAQGAAQEB4AE/BAABwAEDAcABHwQAAcABAwEAAQ8EAAHgAQcBAAEH
+        BAAB4AEHAQIBAwQAAfABDwEHBQAB8AEfAc8BgAIAAYABAQH4AR8B/wHAAgABgAEBAfgBPwH/AeACAAHA
+        AQMB/AE/Af8B8QIAAeABBwH+AX8C/wIAAfgBHwH+AX8C/wIABv8B4wf/AeEB/wGAAQMBgAEDAYABAwHg
+        Af8BgAEDAYABAwGAAQMB4AE/AYABAwGAAQMBgAEDAeABHwGAAQMBgAEDAYABAwHgAQ8BgAEDAYABAwGA
+        AQMB4AEDAYABAwGAAQMBgAEDAeABAQGAAQMBgAEDAYABAwHgAQEBgAEDAYABAwGAAQMB4AEDAYABAwGA
+        AQMBgAEDAeABBwGAAQMBgAEDAYABAwHgAR8BgAEDAYABAwGAAQMB4AE/AYABAwGAAQMBgAEDAeABfwGA
+        AQMBgAEDAYABAwHhB/8B4wH/Cw==
+</value>
+  </data>
+  <metadata name="tsCommands.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
+    <value>17, 17</value>
+  </metadata>
+  <metadata name="tsTargets.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
+    <value>140, 17</value>
+  </metadata>
 </root>
